-- NitrousTracker DEV --

Fixes:

- [#117] Fix "map samples" button UI overlap

-- NitrousTracker v0.4.12 (2024-11-10)

New features:

- [#95] WAV sample import and export now supports loop points
- [#111] adjustable lines per beat

Improvements:

- minor maintenance work in libntxm
- updated BlocksDS toolchain
- updated DSMIDI NRIO USB support library

Fixes:

- fixed some scrollbar render issues in list boxes

-- NitrousTracker v0.4.11 (2024-11-04)

New features:

- DSMIDI support for NRIO/DS Linker Writer Slot-2 USB cartridges

Improvements:

- updated BlocksDS toolchain to 1.6.2
- the about screen now lists the version and the Git commit hash of the build

-- NitrousTracker v0.4.10 (2024-07-08)

New features:

- support for Bxx XM command (exelotl)
- support for EEx XM command (exelotl)

Improvements:

- updated BlocksDS toolchain to 1.3.0

Fixes:

- [#112] fixed freeze on recording long samples
- fixed XM pattern decoding bug leading to missing notes (exelotl)

-- NitrousTracker v0.4.9 (2024-04-26)

New features:

- env sustain playback + configuration (LeviathaninWaves)
- player now supports more pattern effects (LeviathaninWaves)

Improvements:

- NitrousTracker now uses a distinct logo
- updated BlocksDS toolchain

Fixes:

- fixed about message box width
- fixed crash if paths were set without trailing slashes in config file
- fixed combined loop and lock not working correctly
- fixed panning being incorrectly set (exelotl)
- fixed sample panning slider (exelotl)
- fixed saving of sample panning information (exelotl)

-- NitrousTracker v0.4.8 (2023-11-27)

Improvements:

- updated BlocksDS toolchain

-- NitrousTracker v0.4.7 (2023-11-26)

Improvements:

- updated BlocksDS toolchain

Fixes:

- fixed microphone recording length

-- NitrousTracker v0.4.6 (2023-11-10)

New features:

- holding "clr" while playing music will now continue clearing notes

Improvements:

- faster file I/O operations
- updated BlocksDS toolchain

Fixes:
