@@ -3,6 +3,7 @@
 Fixes:
 
 - [#117] Fix "map samples" button UI overlap
+- [#84] Fix sample selection glitch
 
 -- NitrousTracker v0.4.12 (2024-11-10)
 
